# kalshi-bot

./: .gitignore  CMakeLists.txt  KalshiClient.cpp  KalshiClient.hpp  OldOrderBook.cpp  intrusivelists.txt  kalshi  kalshiarchitecture.txt  main.cpp
api/: MetricsHttpServer.cpp  MetricsHttpServer.hpp  metrics_json.hpp  types.hpp
app/: MarketRuntime.cpp  MarketRuntime.hpp
helpers/: helpers.hpp  latencystats.cpp  rest.cpp  timestamps.cpp
infra/: DoubleBuffer.hpp  ObjectRingBuffer.hpp  RingBuffer.cpp  RingBuffer.hpp  StringRingBuffer.hpp
kalshi/: KalshiAuth.cpp  KalshiAuth.hpp  KalshiMessageParser.cpp  KalshiMessageParser.hpp  KalshiRestClient.cpp  KalshiRestClient.hpp  KalshiWsClient.cpp  KalshiWsClient.hpp  KalshiWsMessages.hpp
orderbook/: Orderbook.cpp  Orderbook.hpp
testscripts/: generatedeltas.cpp  orderbookupdates.cpp  orderbookwithmessages.cpp  raworderbookwithmessages.cpp  testringbuffer.cpp  testscripts.hpp  testwebsocket.cpp
